// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ConfirmButton Confirm 1`] = `
<div>
  <button
    aria-label="confirm undo"
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1gp6czg-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Confirm button
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <div />
</div>
`;

exports[`Storyshots ConfirmButton Extends Button 1`] = `
<div>
  <button
    aria-label="confirm undo"
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-h2z0wl-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Confirm button
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <div />
</div>
`;
